Fixed alignment in grid view.

--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -15,3 +15,9 @@
 .navbar .brand {
     color: #ffffff;
 }
+
+/* fix Bootstrap thumbnail padding when using row-fluid */
+.row-fluid ul.thumbnails li.span12 + li { margin-left : 0px; }
+.row-fluid ul.thumbnails li.span6:nth-child(2n + 3) { margin-left : 0px; }
+.row-fluid ul.thumbnails li.span4:nth-child(3n + 4) { margin-left : 0px; }
+.row-fluid ul.thumbnails li.span3:nth-child(4n + 5) { margin-left : 0px; }
